# CompareAdiosKernels

./: CMakeLists.txt  LICENSE  Parameters.h  Params.cpp  Params.h  README.md  adios_reader.h  kernel_comparator.h  main.cpp
